# SOMA

./: .content-linter.json  .env.development  .env.example  .env.production  .env.test  .gitignore  .heartbeat.json  AGENTS.md  ANATOMY_FIX_AGENT_7_COMPLETE.md  ANATOMY_FIX_SUMMARY.md  ANATOMY_FIX_VERIFICATION.md  ANATOMY_LAUNCHPAD_SUMMARY.md  ARCHITECTURE.md  BLUEPRINT.md  BUGFIX_SUMMARY.md  COMPETITION-README.md  CONTENT_AGGREGATION_PLAN.md  CONTENT_COVERAGE.md  CONTENT_STATS.md  DEBUG-SESSION-STATUS.md  DEBUG-SESSION-TEST.md  DEVELOPMENT_SETUP.md  FIXES_VERIFICATION.md  HANDOFF.md  IMAGE-DOWNLOAD-SUMMARY.md  IMAGE-INFRASTRUCTURE-SUMMARY.md  INTEGRATION_STATUS.md  OVERNIGHT_WORK_PLAN.md  PRD.md  PRODUCTION_BUILD_REPORT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  TASKS.md  TEST_CHECKLIST.md  UI_ENHANCEMENT_COMPLETE.md  ai-bridge.ts  ai-predict-bridge.ts  audit-cross-section-enhanced.ts  audit-cross-section-report-2026-02-07-1734.md  (+42 more)
.github/workflows/: build.yml  release.yml
.storybook/: preview.ts
content/: README.md  registry.json
content/openstax/: chapter_19.json  extraction_summary.json  registry.json
core/ai/: ARCHITECTURE.md  deepseek.ts  index.ts  local-llm-service.ts  medical-dictation-matcher.ts  medical-educator.ts  ollama.ts  pubmed-search.ts  smart-medical-search.ts
core/ai-cueing/: index.ts  store.ts  types.ts
core/ai-recommendations/: index.ts  store.ts  types.ts
core/anatomy/: index.ts
core/anatomy-patient-bridge/: bridge.ts  condition-anatomy-map.ts  index.ts  lab-organ-map.ts  medication-target-map.ts  types.ts  utils.ts
core/audio/: accessibility.ts  content-generator.ts  index.ts  module-narrator.ts  storage.ts  tts-engine.ts  types.ts
core/biological-self/: README.md  anatomical-extensions.ts  index.ts  store.ts  types.ts
core/bookmarks/: index.ts  store.ts  types.ts
core/case-simulator/: case-database.ts  index.ts  types.ts
core/clinical-pearls/: index.ts  store.ts  types.ts
core/clinical-reasoning/: condition-database.ts  differential-diagnosis.ts  index.ts  red-flag-education.ts  types.ts
docs/: 3D_MODEL_SOURCES.md  BUILD_OPTIMIZATION_PLAN.md  CODE_REVIEW_REPORT.md  CONTENT_AUDIT_REPORT.md  CONTENT_CREATION_PATTERNS.md  README.md  SECURITY_AUDIT_REPORT.md  SOMA-Navigation-Architecture-Design.md  TESTFLIGHT.md
e2e/: button-tests.spec.ts
extractors/: openstax_playwright.ts  pathology_outlines_playwright.ts
fastlane/: Appfile  Fastfile  Matchfile
images/: EXTRACTION_REPORT.md  README.md
public/: manifest.json  perf-test.html  sw.js  webgl-test.html
pwa/: offline-ui.ts  service-worker.ts
scripts/: blender_export.py  build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-testflight.sh  build-windows.ps1  build-windows.sh  content-linter.ts  content-stats.ts  convert-z-anatomy.py  create-educational-content.js  download-z-anatomy.sh  generate-changelog.js  generate-icons.js  generate-patient-education.ts  increment-build.sh  populate-histology.ts  populate-vector-db.ts  setup-voice.ps1  setup-voice.sh  sync-version.js  validate-cross-references.ts
src/: ARCHITECTURE.md  AnatomyChatPanel.tsx  AnatomyLaunchpad.tsx  AnatomyViewer.tsx  App.tsx  BodyCentricHome.tsx  BodyDiagram.tsx  BrainRegionTest.tsx  ChatView.tsx  ClinicalDashboard.tsx  ClippingPlanes.tsx  CompleteAnatomyLaunchpad.css  CompleteAnatomyLaunchpad.tsx  ComplexityLevel.tsx  ConditionSimulator.css  ConditionSimulator.tsx  ContentViewer.tsx  DiseaseTimelinePanel.css  DiseaseTimelinePanel.tsx  DrugInteractionChecker.css  DrugInteractionChecker.tsx  EducationView.tsx  EncyclopediaEntry.css  EncyclopediaEntry.tsx  HistologyViewer.tsx  ImportView.tsx  InsightsPanel.tsx  LayerPanel.tsx  MedicalEncyclopedia.css  MedicalEncyclopedia.tsx  MedicationExplorer.css  MedicationExplorer.tsx  ModelAutoLoader.tsx  ModelLoader.tsx  ModuleViewer.tsx  PDFImportView.tsx  SelectionManager.tsx  SimplifiedAnatomyViewer.tsx  SpanishEducationView.tsx  StructureInfoPanel.tsx  (+23 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  main-window.json  mobile.json
src-tauri/src/: lib.rs  llm.rs
tests/: CONTENT_VALIDATION_RESULTS.md  README.md  content-validation-readme.md  content-validation.test.ts  jest.config.js  setup.ts  setupTests.ts  testUtils.tsx  vitest.config.ts
voice/: __init__.py  cli.py  contenido.ts  pyproject.toml
voice/common/: __init__.py  audio_io.py  device_detect.py
voice/stt/: __init__.py  transcriber.py
voice/tts/: __init__.py  synthesizer.py  voices.py
(+4789 files in other folders)
