[package]
name = "biological-self"
version = "0.1.0"
description = "Local-first health education app"
authors = ["Danny Gomez"]
license = "AGPL-3.0"
repository = "https://github.com/dannygomez/biological-self"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
