[project]
name = "bioself-voice"
version = "0.1.0"
description = "Voice services for Biological Self app - STT with Qwen2-Audio, TTS with Qwen3-TTS"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Biological Self Team"}
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.57.0",
    "qwen-tts>=0.1.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
cuda = [
    "flash-attn>=2.0.0",
]

[project.scripts]
bioself-voice = "voice.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["voice*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
